Add base views and add and update collections
Added support for handlebar partials
Removed parse-response and added to collection
Added paginated-collection
Added bootstrap plugins
Added convenience-class mixin
Removed old pagination modules

--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,10 @@
   ],
   "ignore": [],
   "dependencies": {
+    "almond": "0.2.9",
     "backbone": "1.2.3",
+    "bootstrap": "3.3.6",
+    "bootstrap-select": "1.9.3",
     "chaplin": "1.1.0",
     "flight": "1.1.4",
     "handlebars": "4.0.5",
