--- a/package.json
+++ b/package.json
@@ -30,11 +30,10 @@
     "bower": "1.3.8",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
-
+    "grunt-contrib-handlebars": "0.11.0",
     "grunt-contrib-clean": "0.5.0",
     "grunt-contrib-coffee": "0.13.0",
     "grunt-shell": "0.6.4",
-
     "load-grunt-tasks": "0.3.0"
   },
   "devDependencies": {
