--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "grunt-coffeelint": "0.0.13",
     "grunt-contrib-watch": "0.5.3",
     "grunt-contrib-copy": "0.5.0",
+    "grunt-htmlhint": "0.9.9",
     "grunt-gh-pages": "0.9.1",
     "grunt-newer": "0.6.1",
     "grunt-notify": "0.2.17"
