--- a/package.json
+++ b/package.json
@@ -28,28 +28,29 @@
     "test": "grunt test:ci"
   },
   "dependencies": {
-    "bower": "1.3.8",
+    "bower": "1.7.7",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
-    "grunt-contrib-handlebars": "0.11.0",
-    "grunt-contrib-clean": "0.5.0",
-    "grunt-contrib-coffee": "0.13.0",
-    "grunt-shell": "0.6.4",
-    "load-grunt-tasks": "0.3.0"
+    "grunt-contrib-handlebars": "1.0.0",
+    "grunt-contrib-clean": "1.0.0",
+    "grunt-contrib-coffee": "1.0.0",
+    "grunt-shell": "1.2.1",
+    "load-grunt-tasks": "3.4.1"
   },
   "devDependencies": {
-    "grunt-bbb-server": "0.1.0-alpha.13",
-    "grunt-bump": "0.0.13",
+    "coffeelint": "1.15.0",
+    "grunt-bump": "0.7.0",
     "grunt-blanket-mocha": "0.5.0",
     "grunt-citare-scriptum": "0.0.1",
-    "grunt-concurrent": "0.5.0",
-    "grunt-coffeelint": "0.0.13",
-    "grunt-contrib-watch": "0.5.3",
-    "grunt-contrib-copy": "0.5.0",
-    "grunt-htmlhint": "0.9.9",
-    "grunt-gh-pages": "0.9.1",
-    "grunt-newer": "0.6.1",
-    "grunt-notify": "0.2.17"
+    "grunt-concurrent": "2.2.1",
+    "grunt-coffeelint": "0.0.15",
+    "grunt-contrib-watch": "1.0.0",
+    "grunt-contrib-connect": "1.0.0",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-htmlhint": "0.9.12-fix",
+    "grunt-gh-pages": "1.0.0",
+    "grunt-newer": "1.1.2",
+    "grunt-notify": "0.4.5"
   },
   "keywords": [
     "javascript",
