--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "Gringotts",
+  "name": "gringotts",
   "description": "A vault of reusable components for Chaplin.",
   "main": "config.js",
-  "version": "0.5.7",
+  "version": "0.5.8",
   "licenses": [
     {
       "type": "MIT",
