--- a/package.json
+++ b/package.json
@@ -29,28 +29,30 @@
   },
   "dependencies": {
     "bower": "1.7.9",
-    "grunt": "1.0.1",
     "grunt-cli": "1.2.0",
-    "grunt-contrib-handlebars": "1.0.0",
     "grunt-contrib-clean": "1.0.0",
     "grunt-contrib-coffee": "1.0.0",
+    "grunt-contrib-handlebars": "1.0.0",
     "grunt-shell": "1.3.0",
+    "grunt": "1.0.1",
     "load-grunt-tasks": "3.5.0"
   },
   "devDependencies": {
     "coffeelint": "1.15.7",
-    "grunt-bump": "0.8.0",
     "grunt-blanket-mocha": "0.5.0",
+    "grunt-bump": "0.8.0",
     "grunt-citare-scriptum": "0.0.1",
-    "grunt-concurrent": "2.3.0",
     "grunt-coffeelint": "0.0.15",
-    "grunt-contrib-watch": "1.0.0",
+    "grunt-concurrent": "2.3.0",
     "grunt-contrib-connect": "1.0.1",
     "grunt-contrib-copy": "1.0.0",
-    "grunt-htmlhint": "0.9.12-fix",
+    "grunt-contrib-watch": "1.0.0",
     "grunt-gh-pages": "1.1.0",
+    "grunt-htmlhint": "0.9.13",
     "grunt-newer": "1.2.0",
-    "grunt-notify": "0.4.5"
+    "grunt-notify": "0.4.5",
+    "grunt-string-replace": "1.2.1",
+    "grunt-verbosity": "1.0.1"
   },
   "keywords": [
     "javascript",
