Add grunt and bower into packages scripts
Stop using global grunt and bower
Move npm dependencies into dev, to reflect what they actually are

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 node_js:
-  - "5"
+  - "6.1.0"
 before_script:
-  - npm install -g grunt-cli
-  - bower install
+  - npm run bower install
 language: node_js
