--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-handlebars": "1.0.0",
     "grunt-contrib-watch": "1.0.0",
+    "grunt-force-task": "2.0.0",
     "grunt-gh-pages": "1.1.0",
     "grunt-htmlhint": "0.9.13",
     "grunt-newer": "1.2.0",
