--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "homepage": "https://github.com/lookout/gringotts",
   "repository": "https://github.com/lookout/gringotts.git",
   "bugs": {
-      "url": "https://github.com/lookout/gringotts/issues",
-      "email": "Eugene Tiutiunnyk <eugene.tiutiunnyk@lookout.com> (http://github.com/eugenet8k)"
+    "url": "https://github.com/lookout/gringotts/issues",
+    "email": "Eugene Tiutiunnyk <eugene.tiutiunnyk@lookout.com> (http://github.com/eugenet8k)"
   },
   "contributors": [
     "Alan Wong <alan@lookout.com> (http://github.com/naganowl)",
@@ -29,14 +29,26 @@
     "bower": "bower",
     "test": "grunt test-ci"
   },
-  "dependencies": {},
+  "dependencies": {
+    "almond": "0.3.3",
+    "backbone-validation": "0.11.5",
+    "backbone.stickit": "0.9.2",
+    "backbone": "1.2.3",
+    "bootstrap": "3.3.6",
+    "chaplin": "1.1.1",
+    "handlebars": "4.0.6",
+    "jquery": "2.2.3",
+    "lodash": "3.10.1",
+    "moment": "2.13.0",
+    "requirejs": "2.3.2",
+    "url-join": "1.1.0"
+  },
   "devDependencies": {
-    "bower": "1.7.9",
+    "blanket": "1.2.3",
+    "chai-jquery": "2.0.0",
+    "chai": "3.5.0",
     "coffeelint": "1.16.0",
-    "grunt-mocha-blanket": "0.6.5",
     "grunt-bump": "0.8.0",
-    "grunt-citare-scriptum": "0.0.1",
-    "grunt-cli": "1.2.0",
     "grunt-coffeelint": "0.0.16",
     "grunt-concurrent": "2.3.1",
     "grunt-contrib-clean": "1.0.0",
@@ -48,13 +60,17 @@
     "grunt-force-task": "2.0.0",
     "grunt-gh-pages": "2.0.0",
     "grunt-htmlhint": "0.9.13",
+    "grunt-mocha-blanket": "0.6.5",
     "grunt-newer": "1.2.0",
     "grunt-notify": "0.4.5",
-    "grunt-shell": "2.0.0",
+    "grunt-shell": "2.1.0",
     "grunt-string-replace": "1.3.1",
     "grunt-verbosity": "1.0.1",
-    "grunt": "0.4.5",
-    "load-grunt-tasks": "3.5.2"
+    "grunt": "1.0.1",
+    "load-grunt-tasks": "3.5.2",
+    "mocha": "2.3.4",
+    "sinon-chai": "2.8.0",
+    "sinon": "1.17.6"
   },
   "keywords": [
     "javascript",
