--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gringotts",
   "description": "A vault of reusable components for Chaplin.",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "homepage": "https://github.com/lookout/gringotts",
   "repository": "https://github.com/lookout/gringotts.git",
   "bugs": {
@@ -15,12 +15,7 @@
     "Eugene Tiutiunnyk <eugene.tiutiunnyk@lookout.com> (http://github.com/eugenet8k)",
     "John Sphar (http://github.com/obimod)"
   ],
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/lookout/gringotts/blob/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "engines": {
     "node": ">=5.0"
   },
@@ -33,13 +28,13 @@
     "almond": "0.3.3",
     "backbone-validation": "0.11.5",
     "backbone.stickit": "0.9.2",
-    "backbone": "1.2.3",
-    "bootstrap": "3.3.6",
-    "chaplin": "1.1.1",
+    "backbone": "1.3.3",
+    "bootstrap": "3.3.7",
+    "chaplin": "1.2.0",
     "handlebars": "4.0.6",
-    "jquery": "2.2.3",
+    "jquery": "2.2.4",
     "lodash": "3.10.1",
-    "moment": "2.13.0",
+    "moment": "2.17.1",
     "requirejs": "2.3.2",
     "url-join": "1.1.0"
   },
@@ -70,7 +65,7 @@
     "load-grunt-tasks": "3.5.2",
     "mocha": "3.2.0",
     "sinon-chai": "2.8.0",
-    "sinon": "1.17.6"
+    "sinon": "1.17.7"
   },
   "keywords": [
     "javascript",
