--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gringotts",
   "description": "A vault of reusable components for Chaplin.",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "homepage": "https://github.com/lookout/gringotts",
   "repository": "https://github.com/lookout/gringotts.git",
   "bugs": {
@@ -32,7 +32,7 @@
     "bootstrap": "3.3.7",
     "chaplin": "1.2.0",
     "handlebars": "4.0.6",
-    "jquery": "2.2.4",
+    "jquery": "3.1.1",
     "lodash": "3.10.1",
     "moment": "2.17.1",
     "requirejs": "2.3.2",
@@ -44,6 +44,7 @@
     "chai": "3.5.0",
     "coffeelint": "1.16.0",
     "grunt-bump": "0.8.0",
+    "grunt-check-dependencies": "1.0.0",
     "grunt-coffeelint": "0.0.16",
     "grunt-concurrent": "2.3.1",
     "grunt-contrib-clean": "1.0.0",
