Simplify StringTemplatable mixin
- Removes templatePath
- handlebars:prod task only pre-compiles src/templates/**/*/.hbs
- handlebars:dev also includes both src and test templates
- We only generate a single templates.js now, which contains the only
the src templates for production builds, and both src and test
templates for other testing and local development.
- Adds env flag for handlebars task

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "node": ">=5.0"
   },
   "scripts": {
-    "grunt": "grunt",
-    "bower": "bower",
+    "start": "grunt",
     "test": "grunt test-ci"
   },
   "dependencies": {
