--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gringotts",
   "description": "A vault of reusable components for Chaplin.",
-  "version": "2.0.11",
+  "version": "2.1.0",
   "homepage": "https://github.com/lookout/gringotts",
   "repository": "https://github.com/lookout/gringotts.git",
   "bugs": {
@@ -20,8 +20,7 @@
     "node": ">=5.0"
   },
   "scripts": {
-    "grunt": "grunt",
-    "bower": "bower",
+    "start": "grunt",
     "test": "grunt test-ci"
   },
   "dependencies": {
