--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "views/"
   ],
   "scripts": {
-    "start": "NODE_ENV=development karma start",
+    "start": "webpack-dev-server --config ./webpack.config.dev.js",
     "lint": "scripts/lint.sh",
     "lint:coffee": "echo lib mixins models templates test views | xargs -n 1 coffeelint -f coffeelint.json",
     "test": "NODE_ENV=production karma start --single-run",
@@ -55,6 +55,7 @@
     "chai-jquery": "2.0.0",
     "coffee-loader": "0.7.3",
     "coffeelint": "1.16.0",
+    "expose-loader": "0.7.3",
     "handlebars-loader": "1.6.0",
     "htmlhint-loader": "1.3.0",
     "istanbul-instrumenter-loader": "3.0.0",
@@ -71,10 +72,11 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "2.0.4",
     "mocha": "3.2.0",
+    "mocha-loader": "1.1.1",
     "sinon": "1.17.7",
     "sinon-chai": "2.9.0",
-    "webpack": "3.4.1",
-    "webpack-config-utils": "2.3.0"
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.9.0"
   },
   "keywords": [
     "javascript",
