--- a/package.json
+++ b/package.json
@@ -40,13 +40,13 @@
   },
   "dependencies": {
     "backbone": "1.3.3",
-    "backbone-validation": "0.11.5",
-    "backbone.stickit": "0.9.2",
+    "backbone-validation": "https://github.com/bzalasky/backbone.validation.git#lodash@4-compatibility",
+    "backbone.stickit": "https://github.com/NYTimes/backbone.stickit.git",
     "bootstrap": "3.3.7",
     "chaplin": "1.2.0",
     "handlebars": "4.0.6",
     "jquery": "3.1.1",
-    "lodash": "3.10.1",
+    "lodash": "4.17.4",
     "moment": "2.17.1",
     "url-join": "1.1.0"
   },
