--- a/package.json
+++ b/package.json
@@ -44,22 +44,28 @@
     "backbone.stickit": "https://github.com/NYTimes/backbone.stickit.git",
     "bootstrap": "3.3.7",
     "chaplin": "1.2.0",
-    "handlebars": "4.0.6",
-    "jquery": "3.1.1",
+    "handlebars": "4.0.11",
+    "jquery": "3.2.1",
     "lodash": "4.17.4",
-    "moment": "2.17.1",
-    "url-join": "1.1.0"
+    "moment": "2.20.1",
+    "url-join": "2.0.2"
   },
   "devDependencies": {
+    "babel-core": "6.26.0",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-es2015-spread": "6.22.0",
+    "babel-plugin-transform-imports": "1.4.1",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-env": "1.6.1",
     "chai": "4.1.2",
-    "chai-jquery": "2.0.0",
-    "coffee-loader": "0.7.3",
-    "coffeelint": "1.16.0",
-    "expose-loader": "0.7.3",
+    "chai-jquery": "https://github.com/lookout/chai-jquery.git#props-to-methods",
+    "coffee-loader": "0.9.0",
+    "coffeelint": "2.0.7",
+    "expose-loader": "0.7.4",
     "handlebars-loader": "1.6.0",
     "htmlhint-loader": "1.3.0",
     "istanbul-instrumenter-loader": "3.0.0",
-    "karma": "1.7.0",
+    "karma": "1.7.1",
     "karma-chai": "0.1.0",
     "karma-chai-plugins": "0.8.0",
     "karma-chrome-launcher": "2.2.0",
@@ -69,14 +75,14 @@
     "karma-nyan-reporter": "0.2.5",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "2.0.4",
-    "mocha": "3.2.0",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "2.0.9",
+    "mocha": "4.0.1",
     "mocha-loader": "1.1.1",
     "sinon": "1.17.7",
     "sinon-chai": "2.9.0",
-    "webpack": "3.6.0",
-    "webpack-dev-server": "2.9.0"
+    "webpack": "3.10.0",
+    "webpack-dev-server": "2.9.7"
   },
   "keywords": [
     "javascript",
