Add proper autofocus to all modal views
* Bootstrap framework claims that `autofocus` attr doesn’t work in modals
(https://getbootstrap.com/docs/3.3/javascript/#modals). Use custom code
to autofocus element with the attr on modal shown event.
* If modal view doesn’t have elements to autofocus, set focus to a first button
from the footer. It is very helpful for all dialogs.
* Update ProgressDialogView to apply autofocus logic after each state change.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.dev.js",
     "lint": "scripts/lint.sh",
-    "lint:coffee": "echo lib mixins models spec templates views | xargs -n 1 coffeelint -f coffeelint.json",
+    "lint:coffee": "echo lib mixins models spec templates views | xargs -n 1 coffeelint -q",
     "test": "scripts/lint.sh; NODE_ENV=production karma start --single-run",
     "bump:patch": "npm version patch -m \"Release %s\"",
     "bump:minor": "npm version minor -m \"Release %s\"",
