Migrate to new SinonJS
* Switch sync mode for all Ajax related unit tests
 - This is to overcome SinonJS issue when it’s mocking window timer and prevents
normal execution of jQuery Deferred chains)
 - It also dramatically decreasing the unit test execution time

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "start": "webpack-dev-server --config ./webpack.config.dev.js",
     "lint": "scripts/lint.sh",
     "lint:coffee": "echo lib mixins models spec templates views | xargs -n 1 coffeelint -q",
-    "test": "scripts/lint.sh; NODE_ENV=production karma start --single-run",
+    "test": "scripts/lint.sh; NODE_ENV=production karma start",
     "bump:patch": "npm version patch -m \"Release %s\"",
     "bump:minor": "npm version minor -m \"Release %s\"",
     "bump:major": "npm version major -m \"Release %s\"",
@@ -46,7 +46,7 @@
     "chaplin": "1.2.0",
     "handlebars": "4.0.11",
     "jquery": "3.2.1",
-    "lodash": "4.17.4",
+    "lodash": "4.17.5",
     "moment": "2.20.1",
     "url-join": "2.0.2"
   },
@@ -65,11 +65,11 @@
     "handlebars-loader": "1.6.0",
     "htmlhint-loader": "1.3.0",
     "istanbul-instrumenter-loader": "3.0.0",
-    "karma": "1.7.1",
+    "karma": "2.0.0",
     "karma-chai": "0.1.0",
-    "karma-chai-plugins": "0.8.0",
+    "karma-chai-plugins": "0.9.0",
     "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "1.3.0",
+    "karma-coverage-istanbul-reporter": "1.4.1",
     "karma-jquery": "0.2.2",
     "karma-mocha": "1.3.0",
     "karma-nyan-reporter": "0.2.5",
@@ -77,12 +77,13 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "2.0.9",
-    "mocha": "4.0.1",
-    "mocha-loader": "1.1.1",
-    "sinon": "1.17.7",
-    "sinon-chai": "2.9.0",
-    "webpack": "3.10.0",
-    "webpack-dev-server": "2.9.7"
+    "lolex": "2.3.2",
+    "mocha": "5.0.0",
+    "mocha-loader": "1.1.3",
+    "sinon": "4.3.0",
+    "sinon-chai": "2.14.0",
+    "webpack": "3.11.0",
+    "webpack-dev-server": "2.11.1"
   },
   "keywords": [
     "javascript",
