--- a/package.json
+++ b/package.json
@@ -51,39 +51,40 @@
     "url-join": "2.0.2"
   },
   "devDependencies": {
-    "babel-core": "6.26.0",
+    "babel-core": "6.26.3",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-es2015-spread": "6.22.0",
-    "babel-plugin-transform-imports": "1.4.1",
+    "babel-plugin-transform-imports": "1.5.0",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.6.1",
+    "babel-preset-env": "1.7.0",
     "chai": "4.1.2",
     "chai-jquery": "https://github.com/lookout/chai-jquery.git#props-to-methods",
     "coffee-loader": "0.9.0",
-    "coffeelint": "2.0.7",
-    "expose-loader": "0.7.4",
-    "handlebars-loader": "1.6.0",
-    "htmlhint-loader": "1.3.0",
-    "istanbul-instrumenter-loader": "3.0.0",
-    "karma": "2.0.0",
+    "coffeelint": "2.1.0",
+    "expose-loader": "0.7.5",
+    "handlebars-loader": "1.7.0",
+    "htmlhint-loader": "1.3.1",
+    "istanbul-instrumenter-loader": "3.0.1",
+    "karma": "2.0.2",
     "karma-chai": "0.1.0",
     "karma-chai-plugins": "0.9.0",
     "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "1.4.1",
+    "karma-coverage-istanbul-reporter": "2.0.1",
     "karma-jquery": "0.2.2",
     "karma-mocha": "1.3.0",
     "karma-nyan-reporter": "0.2.5",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "2.0.9",
+    "karma-webpack": "3.0.0",
     "lolex": "2.3.2",
-    "mocha": "5.0.0",
+    "mocha": "5.2.0",
     "mocha-loader": "1.1.3",
     "sinon": "4.3.0",
-    "sinon-chai": "2.14.0",
-    "webpack": "3.11.0",
-    "webpack-dev-server": "2.11.1"
+    "sinon-chai": "3.1.0",
+    "webpack": "4.10.2",
+    "webpack-cli": "3.0.2",
+    "webpack-dev-server": "3.1.4"
   },
   "keywords": [
     "javascript",
