--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": ">=5.0"
+    "node": ">=10.3.0"
   },
   "files": [
     "index.coffee",
@@ -29,10 +29,10 @@
     "views/"
   ],
   "scripts": {
-    "start": "webpack-serve ./webpack.config.dev.js",
+    "start": "BABEL_ENV=dev webpack-serve ./webpack.config.dev.js",
     "lint": "scripts/lint.sh",
     "lint:coffee": "echo lib mixins models spec templates views | xargs -n 1 coffeelint -q",
-    "test": "scripts/lint.sh; NODE_ENV=production karma start",
+    "test": "scripts/lint.sh; BABEL_ENV=prod NODE_ENV=production karma start",
     "bump:patch": "npm version patch -m \"Release %s\"",
     "bump:minor": "npm version minor -m \"Release %s\"",
     "bump:major": "npm version major -m \"Release %s\"",
@@ -45,18 +45,22 @@
     "bootstrap": "3.3.7",
     "chaplin": "1.2.0",
     "handlebars": "4.0.11",
-    "jquery": "3.2.1",
-    "lodash": "4.17.5",
-    "moment": "2.20.1",
+    "jquery": "3.3.1",
+    "lodash": "4.17.10",
+    "moment": "2.22.2",
     "url-join": "2.0.2"
   },
   "devDependencies": {
-    "babel-core": "6.26.3",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-es2015-spread": "6.22.0",
-    "babel-plugin-transform-imports": "1.5.0",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.7.0",
+    "@babel/core": "7.0.0",
+    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.0.0",
+    "@babel/plugin-proposal-optional-chaining": "7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-transform-runtime": "7.0.0",
+    "@babel/polyfill": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/runtime": "7.0.0",
+    "babel-loader": "8.0.0",
     "chai": "4.1.2",
     "chai-jquery": "https://github.com/lookout/chai-jquery.git#props-to-methods",
     "coffee-loader": "0.9.0",
@@ -65,24 +69,24 @@
     "handlebars-loader": "1.7.0",
     "htmlhint-loader": "1.3.1",
     "istanbul-instrumenter-loader": "3.0.1",
-    "karma": "2.0.2",
+    "karma": "3.0.0",
     "karma-chai": "0.1.0",
     "karma-chai-plugins": "0.9.0",
     "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.1",
-    "karma-jquery": "0.2.2",
+    "karma-coverage-istanbul-reporter": "2.0.2",
+    "karma-jquery": "0.2.3",
     "karma-mocha": "1.3.0",
     "karma-nyan-reporter": "0.2.5",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "3.0.0",
-    "lolex": "2.3.2",
+    "lolex": "2.7.1",
     "mocha": "5.2.0",
-    "mocha-loader": "1.1.3",
-    "sinon": "4.3.0",
-    "sinon-chai": "3.1.0",
-    "webpack": "4.16.5",
+    "mocha-loader": "2.0.0",
+    "sinon": "6.1.5",
+    "sinon-chai": "3.2.0",
+    "webpack": "4.17.1",
     "webpack-cli": "3.1.0",
     "webpack-serve": "2.0.2"
   },
