Clean up unused code and config

--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "views/"
   ],
   "scripts": {
-    "start": "BABEL_ENV=dev webpack-serve ./webpack.config.dev.js",
+    "start": "NODE_ENV=development webpack-serve ./webpack.config.dev.js",
     "lint": "scripts/lint.sh",
     "lint:coffee": "echo lib mixins models spec templates views | xargs -n 1 coffeelint -q",
-    "test": "scripts/lint.sh; BABEL_ENV=prod NODE_ENV=production karma start",
+    "test": "scripts/lint.sh; NODE_ENV=production karma start",
     "bump:patch": "npm version patch -m \"Release %s\"",
     "bump:minor": "npm version minor -m \"Release %s\"",
     "bump:major": "npm version major -m \"Release %s\"",
@@ -55,11 +55,8 @@
     "@babel/plugin-proposal-class-properties": "7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
     "@babel/plugin-proposal-optional-chaining": "7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "7.0.0",
-    "@babel/plugin-transform-runtime": "7.0.0",
     "@babel/polyfill": "7.0.0",
     "@babel/preset-env": "7.0.0",
-    "@babel/runtime": "7.0.0",
     "babel-loader": "8.0.0",
     "chai": "4.1.2",
     "chai-jquery": "https://github.com/lookout/chai-jquery.git#props-to-methods",
