--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,10 @@
 {
   "plugins": [
     "@babel/plugin-proposal-class-properties",
-    "@babel/plugin-proposal-optional-chaining",
-    "@babel/plugin-syntax-dynamic-import",
-    "@babel/plugin-transform-runtime"
+    "@babel/plugin-proposal-optional-chaining"
   ],
   "env": {
-    "dev": {
+    "development": {
       "presets": [
         ["@babel/preset-env", {
           "targets": {
@@ -18,9 +16,8 @@
         }]
       ]
     },
-    "prod": {
+    "production": {
       "plugins": [
-        "@babel/plugin-transform-async-to-generator",
         "@babel/plugin-transform-spread",
         "@babel/plugin-proposal-object-rest-spread"
       ],
