--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "jquery": "3.3.1",
     "lodash": "4.17.10",
     "moment": "2.22.2",
-    "url-join": "2.0.2"
+    "url-join": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0",
@@ -86,6 +86,9 @@
     "webpack": "4.17.1",
     "webpack-cli": "3.1.0",
     "webpack-serve": "2.0.2"
+  },
+  "peerDependencies": {
+    "url-join": "4.0.0"
   },
   "keywords": [
     "javascript",
