Use webpack-dev-server again
* Going back to the roots
* Fix a controversial usage of lodash slice for converting
arguments to array. The old techic was failing due to some
unknown reasons in newer webpack builds with all latest
dependencies, like js-uglify etc.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "views/"
   ],
   "scripts": {
-    "start": "NODE_ENV=development webpack-serve ./webpack.config.dev.js",
+    "start": "NODE_ENV=development webpack-dev-server --config ./webpack.config.dev.js",
     "lint": "scripts/lint.sh",
     "lint:coffee": "echo lib mixins models spec templates views | xargs -n 1 coffeelint -q",
     "test": "scripts/lint.sh; NODE_ENV=production karma start",
@@ -44,20 +44,20 @@
     "backbone.stickit": "https://github.com/NYTimes/backbone.stickit.git",
     "bootstrap": "3.3.7",
     "chaplin": "1.2.0",
-    "handlebars": "4.0.11",
+    "handlebars": "4.0.12",
     "jquery": "3.3.1",
-    "lodash": "4.17.10",
+    "lodash": "4.17.11",
     "moment": "2.22.2",
     "url-join": "4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.0.0",
+    "@babel/core": "7.1.2",
+    "@babel/plugin-proposal-class-properties": "7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "7.0.0",
     "@babel/plugin-proposal-optional-chaining": "7.0.0",
     "@babel/polyfill": "7.0.0",
-    "@babel/preset-env": "7.0.0",
-    "babel-loader": "8.0.0",
+    "@babel/preset-env": "7.1.0",
+    "babel-loader": "8.0.4",
     "chai": "4.1.2",
     "chai-jquery": "https://github.com/lookout/chai-jquery.git#props-to-methods",
     "coffee-loader": "0.9.0",
@@ -70,22 +70,22 @@
     "karma-chai": "0.1.0",
     "karma-chai-plugins": "0.9.0",
     "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.2",
+    "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jquery": "0.2.3",
     "karma-mocha": "1.3.0",
     "karma-nyan-reporter": "0.2.5",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "3.0.0",
+    "karma-webpack": "3.0.5",
     "lolex": "2.7.1",
     "mocha": "5.2.0",
     "mocha-loader": "2.0.0",
     "sinon": "6.1.5",
     "sinon-chai": "3.2.0",
-    "webpack": "4.17.1",
-    "webpack-cli": "3.1.0",
-    "webpack-serve": "2.0.2"
+    "webpack": "4.20.2",
+    "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.9"
   },
   "peerDependencies": {
     "url-join": "4.0.0"
