--- a/package.json
+++ b/package.json
@@ -64,21 +64,17 @@
     "htmlhint-loader": "1.3.1",
     "istanbul-instrumenter-loader": "3.0.1",
     "karma": "3.1.3",
-    "karma-chai": "0.1.0",
-    "karma-chai-plugins": "0.9.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.4",
-    "karma-jquery": "0.2.3",
     "karma-mocha": "1.3.0",
-    "karma-nyan-reporter": "0.2.5",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "3.0.5",
+    "karma-webpack": "4.0.0-rc.5",
     "lolex": "3.0.0",
     "mocha": "5.2.0",
     "mocha-loader": "2.0.0",
-    "sinon": "7.1.1",
+    "sinon": "7.2.2",
     "sinon-chai": "3.3.0",
     "webpack": "4.27.1",
     "webpack-cli": "3.1.2",
