--- a/package.json
+++ b/package.json
@@ -48,37 +48,37 @@
     "url-join": "4.0.1"
   },
   "devDependencies": {
-    "@babel/core": "7.2.0",
-    "@babel/plugin-proposal-class-properties": "7.2.1",
-    "@babel/plugin-proposal-object-rest-spread": "7.2.0",
+    "@babel/core": "7.5.5",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
     "@babel/plugin-proposal-optional-chaining": "7.2.0",
-    "@babel/polyfill": "7.0.0",
-    "@babel/preset-env": "7.2.0",
-    "babel-loader": "8.0.4",
+    "@babel/preset-env": "7.5.5",
+    "babel-loader": "8.0.6",
     "chai": "4.2.0",
     "chai-jquery": "https://github.com/lookout/chai-jquery.git#props-to-methods",
     "coffee-loader": "0.9.0",
     "coffeelint": "2.1.0",
+    "core-js": "3.1.4",
     "expose-loader": "0.7.5",
     "handlebars-loader": "1.7.1",
     "htmlhint-loader": "1.3.1",
     "istanbul-instrumenter-loader": "3.0.1",
-    "karma": "4.0.1",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.5",
+    "karma": "4.2.0",
+    "karma-chrome-launcher": "3.0.0",
+    "karma-coverage-istanbul-reporter": "2.1.0",
     "karma-mocha": "1.3.0",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "4.0.0-rc.5",
-    "lolex": "3.1.0",
-    "mocha": "6.0.2",
+    "karma-webpack": "4.0.2",
+    "lolex": "4.2.0",
+    "mocha": "6.2.0",
     "mocha-loader": "2.0.1",
-    "sinon": "7.3.0",
+    "sinon": "7.4.1",
     "sinon-chai": "3.3.0",
-    "webpack": "4.29.6",
-    "webpack-cli": "3.3.0",
-    "webpack-dev-server": "3.2.1"
+    "webpack": "4.39.1",
+    "webpack-cli": "3.3.6",
+    "webpack-dev-server": "3.7.2"
   },
   "keywords": [
     "javascript",
