--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gringotts",
   "description": "A vault of reusable components for Chaplin.",
-  "version": "4.1.8",
+  "version": "4.1.9",
   "main": "index.coffee",
   "homepage": "https://github.com/lookout/gringotts",
   "repository": "https://github.com/lookout/gringotts.git",
@@ -37,7 +37,7 @@
   },
   "peerDependencies": {
     "backbone": "1.4.0",
-    "backbone-validation": "https://github.com/bzalasky/backbone.validation.git#lodash@4-compatibility",
+    "backbone-validation": "https://github.com/lookout/backbone.validation.git#lodash@4-compatibility",
     "backbone.stickit": "https://github.com/NYTimes/backbone.stickit.git",
     "bootstrap": "3.3.7",
     "chaplin": "1.2.0",
@@ -48,37 +48,37 @@
     "url-join": "4.0.1"
   },
   "devDependencies": {
-    "@babel/core": "7.5.5",
+    "@babel/core": "7.6.4",
     "@babel/plugin-proposal-class-properties": "7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "7.5.5",
-    "@babel/plugin-proposal-optional-chaining": "7.2.0",
-    "@babel/preset-env": "7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "7.6.2",
+    "@babel/plugin-proposal-optional-chaining": "7.6.0",
+    "@babel/preset-env": "7.6.3",
     "babel-loader": "8.0.6",
     "chai": "4.2.0",
     "chai-jquery": "https://github.com/lookout/chai-jquery.git#props-to-methods",
     "coffee-loader": "0.9.0",
     "coffeelint": "2.1.0",
-    "core-js": "3.1.4",
+    "core-js": "3.3.6",
     "expose-loader": "0.7.5",
     "handlebars-loader": "1.7.1",
     "htmlhint-loader": "1.3.1",
     "istanbul-instrumenter-loader": "3.0.1",
-    "karma": "4.2.0",
-    "karma-chrome-launcher": "3.0.0",
+    "karma": "4.4.1",
+    "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "2.1.0",
     "karma-mocha": "1.3.0",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
     "karma-spec-reporter": "0.0.32",
     "karma-webpack": "4.0.2",
-    "lolex": "4.2.0",
-    "mocha": "6.2.0",
-    "mocha-loader": "2.0.1",
-    "sinon": "7.4.1",
+    "lolex": "5.1.1",
+    "mocha": "6.2.2",
+    "mocha-loader": "3.0.0",
+    "sinon": "7.5.0",
     "sinon-chai": "3.3.0",
-    "webpack": "4.39.1",
-    "webpack-cli": "3.3.6",
-    "webpack-dev-server": "3.7.2"
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "3.9.0"
   },
   "keywords": [
     "javascript",
